# WebGPU-Bloom

./: Cargo.toml  README.md
assets/shaders/: bloom.wgsl  final.wgsl  pbr.wgsl
src/: bloom.rs  context.rs  main.rs
src/renderer/: buffer.rs  camera.rs  gui.rs  mesh.rs  mod.rs  texture.rs
