[package]
name = "wgpu_bloom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
winit = "0.26"
winit_input_helper = "0.11.1"
ultraviolet = "0.9.0"
rayon = "1.5.1"
pollster = "0.2.5"
obj-rs = "0.7.0"
